# swift-account-caretaker

./: .caretaker  README.md  multi_example.yaml  requirements.txt  setup.cfg  simple_example.yaml
caretaker/: accounts.py  collector.py  common.py
