[metadata]
name = swift-account-caretaker
summary = Swift Account Caretaker
description-file =
    README.md
license = Apache-2
author = SAP
author-email = falk.reimann@sap.com
home-page = https://github.com/sapcc/swift-account-caretaker
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    caretaker
scripts =
    bin/sac-collector

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1