[metadata]
name = swift-account-caretaker
summary = Swift Account Caretaker
description-file =
    README.md
license = Apache-2
author = SAP
author-email = falk.reimann@sap.com
home-page = https://github.com/sapcc/swift-account-caretaker
python_requires = >=3.8
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    caretaker
scripts =
    bin/swift-account-caretaker
    bin/swift-account-ratelimit

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
